Added inclass correction

--- a/notebooks/3_1_perturbation_neoclassical_correction.ipynb
+++ b/notebooks/3_1_perturbation_neoclassical_correction.ipynb
@@ -20,16 +20,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling ForwardDiff [f6369f11-7733-5829-9624-2563aa707210]\n",
-      "└ @ Base loading.jl:1278\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using ForwardDiff"
    ]
@@ -46,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,22 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "f (generic function with 3 methods)"
+       "f (generic function with 2 methods)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function f(x::Vector{Float64})::Vector{Float64}\n",
+    "function f(x)\n",
     "    a = x[1]\n",
     "    b = x[2] + 0.01\n",
     "    for i=1:10\n",
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +84,7 @@
        " 1.4426536581911549"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,25 +95,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000043 seconds (6 allocations: 560 bytes)\n"
+      "  0.577989 seconds (1.26 M allocations: 62.461 MiB, 3.44% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "2×2 Array{Float64,2}:\n",
-       " 2.19482  -0.872087\n",
-       " 0.39968  -0.389418"
+       " 61.7259  1.10086\n",
+       " 50.7438  0.915348"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,13 +121,6 @@
    "source": [
     "@time jacobian(f, [0.2, 0.4])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -147,10 +131,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Results of Nonlinear Solver Algorithm\n",
+       " * Algorithm: Trust-region with dogleg and autoscaling\n",
+       " * Starting Point: [0.0, 0.0]\n",
+       " * Zero: [0.5436890126920804, 0.8392867552141576]\n",
+       " * Inf-norm of residuals: 0.000000\n",
+       " * Iterations: 5\n",
+       " * Convergence: true\n",
+       "   * |x - x'| < 0.0e+00: false\n",
+       "   * |f(x)| < 1.0e-08: true\n",
+       " * Function Calls (f): 6\n",
+       " * Jacobian Calls (df/dx): 6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using NLsolve\n",
+    "f(x) = [(x[1]*x[2])-1 + x[1], x[1]*x[1] + x[1] - x[2]]\n",
+    "x0 = [0.0, 0.0]\n",
+    "res = NLsolve.nlsolve(f, x0) # here there might be multiple solution depending on the initial guess"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +238,7 @@
        "Calibration(0.3, 0.96, 4.0, 0.1, 0.9)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,27 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.α"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +258,7 @@
        "U (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,28 +272,29 @@
    "metadata": {},
    "source": [
     "__Define two functions:__\n",
-    "- `transition(z::Float64, k::Float64, i::Float64, p::Calibration)::Tuple{Float64}` which returns productivity and capital at date `t+1` as a function of productivity, capital and investment at date `t`\n",
-    "- `arbitrage(z::Float64, k::Float64, i::Float64, Z::Float64, K::Float64, I::Float64, p::Calibration)::Float64` which returns the residual of the euler equation (lower case variable for date t, upper case for date t+1)\n"
+    "- `transition(z, k, i, p::ModelCalibration)::Tuple{Float64, Float64}` which returns productivity and capital at date `t+1` as a function of productivity, capital and investment at date `t`\n",
+    "- `arbitrage(z, k, i, Z, K, I, p::Calibration)::Tuple{Float64}` which returns the residual of the euler equation (lower case variable for date t, upper case for date t+1)\n",
+    "- Note that we don't specify the arguments type so that we can us duck typing to perform automatic differentiation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "transition (generic function with 1 method)"
+       "transition (generic function with 2 methods)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function transition(z::Float64, k::Float64, i::Float64, p::Calibration)\n",
+    "function transition(z, k, i, p::Calibration)\n",
     "    Z = p.ρ*z\n",
     "    K = (1-p.δ)*k + i\n",
     "    return (Z, K)\n",
@@ -312,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +312,7 @@
        "(0.09000000000000001, 2.9000000000000004)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +323,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "arbitrage (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function arbitrage(z, k, i, Z, K, I, p::Calibration)\n",
+    "    c = exp(z)*k^p.α - i\n",
+    "    C = exp(Z)*K^p.α - I\n",
+    "    res = p.β * (C/c)^(-p.γ)*(1-p.δ + exp(Z)*k^(p.α-1)*p.α) - 1\n",
+    "    return [res]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Using multiple dispatch, define two variants of the same functions, that take vectors as input and output arguments:__\n",
+    "- `arbitrage(s, x, S, X, p::Calibration)`\n",
+    "- `transition(s, x, p::Calibration)`\n",
+    "- We aim to supply vectors, for s,x,S and X, but we don't supply arguments types: we use duck typing, in order to use automatic differentiation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -341,116 +367,34 @@
        "transition (generic function with 2 methods)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transition(s::Vector, x::Vector, p) = [transition(s[1], s[2], x[1], p)...]"
+    "transition(s, x, p) = [transition(s[1], s[2], x[1], p)...]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2-element Array{Float64,1}:\n",
-       " 0.09000000000000001\n",
-       " 2.9000000000000004"
+       "arbitrage (generic function with 2 methods)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transition([0.1, 3.0], [0.2], c)"
+    "arbitrage(s, x, S, X, p) = arbitrage(s[1],s[2], x[1], S[1], S[2], X[1], p)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using ForwardDiff: jacobian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "#5 (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anonymous = (u->transition(u, [0.2], c))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching transition(::ForwardDiff.Dual{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2}, ::ForwardDiff.Dual{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2}, ::Float64, ::Calibration)\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  transition(\u001b[91m::Float64\u001b[39m, \u001b[91m::Float64\u001b[39m, ::Float64, ::Calibration) at In[7]:1\u001b[39m\n\u001b[91m\u001b[0m  transition(\u001b[91m::Array{T,1} where T\u001b[39m, \u001b[91m::Array{T,1} where T\u001b[39m, ::Any) at In[11]:1\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: no method matching transition(::ForwardDiff.Dual{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2}, ::ForwardDiff.Dual{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2}, ::Float64, ::Calibration)\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  transition(\u001b[91m::Float64\u001b[39m, \u001b[91m::Float64\u001b[39m, ::Float64, ::Calibration) at In[7]:1\u001b[39m\n\u001b[91m\u001b[0m  transition(\u001b[91m::Array{T,1} where T\u001b[39m, \u001b[91m::Array{T,1} where T\u001b[39m, ::Any) at In[11]:1\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] transition(::Array{ForwardDiff.Dual{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2},1}, ::Array{Float64,1}, ::Calibration) at ./In[11]:1",
-      " [2] (::var\"#5#6\")(::Array{ForwardDiff.Dual{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2},1}) at ./In[17]:1",
-      " [3] vector_mode_dual_eval(::var\"#5#6\", ::Array{Float64,1}, ::ForwardDiff.JacobianConfig{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2,Array{ForwardDiff.Dual{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2},1}}) at /home/pablo/.julia/packages/ForwardDiff/sqhTO/src/apiutils.jl:37",
-      " [4] vector_mode_jacobian(::var\"#5#6\", ::Array{Float64,1}, ::ForwardDiff.JacobianConfig{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2,Array{ForwardDiff.Dual{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2},1}}) at /home/pablo/.julia/packages/ForwardDiff/sqhTO/src/jacobian.jl:147",
-      " [5] jacobian(::Function, ::Array{Float64,1}, ::ForwardDiff.JacobianConfig{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2,Array{ForwardDiff.Dual{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2},1}}, ::Val{true}) at /home/pablo/.julia/packages/ForwardDiff/sqhTO/src/jacobian.jl:21",
-      " [6] jacobian(::Function, ::Array{Float64,1}, ::ForwardDiff.JacobianConfig{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2,Array{ForwardDiff.Dual{ForwardDiff.Tag{var\"#5#6\",Float64},Float64,2},1}}) at /home/pablo/.julia/packages/ForwardDiff/sqhTO/src/jacobian.jl:19 (repeats 2 times)",
-      " [7] top-level scope at In[20]:1",
-      " [8] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
-    }
-   ],
-   "source": [
-    "jacobian(anonymous, [0.1, 3.0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Using multiple dispatch, define two variants of the same functions, that take vectors as input and output arguments:__\n",
-    "- `arbitrage(s::Vector{Float64}, x::Vector{Float64}, S::Vector{Float64}, X::Vector{Float64}, p::Calibration)`\n",
-    "- `transition(s::Vector{Float64}, x::Vector{Float64}, p::Calibration)`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -461,16 +405,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "steady_state (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function steady_state(p::Calibration)\n",
+    "    kbar = ((1/p.β - (1-p.δ))/p.α)^(1/(p.α - 1))\n",
+    "    ibar = p.δ * kbar\n",
+    "    zbar = 0.0\n",
+    "    return ([zbar, kbar], [ibar])\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.0, 2.920822149964071], [0.29208221499640713])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s0, x0 = steady_state(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Array{Float64,1}:\n",
+       " 0.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this should satisfy the model equations:\n",
+    "arbitrage(s0, x0, s0, x0, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Float64,1}:\n",
+       " 0.0\n",
+       " 0.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transition(s0, x0, c) - s0"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first order system satisfies:\n",
+    "Functions `arbitrage` and `transition` corresponds to a standard representation of the model.\n",
+    "\n",
+    "$$\\begin{eqnarray}f(s_t , x_t, s_{t+1}, x_{t+1}) & = & 0 \\\\\\\\ \n",
+    "s_{t+1} & = & g( s_t , x_t)\n",
+    " \\end{eqnarray}$$\n",
+    " \n",
+    "When we differentiate it, we get:\n",
+    "\n",
+    "$$\\begin{eqnarray}\\Delta f(s_t , x_t, s_{t+1}, x_{t+1})  =  f^{\\prime}_{s_t} \\Delta s_t + f^{\\prime}_{x_t} \\Delta x_t + f^{\\prime}_{x_{t+1}} \\Delta x_{t+1} +   f^{\\prime}_{s_{t+1}} \\Delta S_{t+1} & = & 0 \\\\\\\\\n",
+    "\\Delta s_{t+1} & = & g^{\\prime}_s \\Delta s_t + g^{\\prime}_x \\Delta x_t\\end{eqnarray}$$\n",
+    "\n",
+    "where derivatives are computed at the steady-state."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The *first order* system satisfies\n",
+    "\n",
     "$$\\begin{eqnarray}A s_t + B x_t + C s_{t+1} + D x_{t+1} & = & 0 \\\\\\\\ \n",
     "s_{t+1} & = & E s_t + F x_t\n",
     " \\end{eqnarray}$$\n",
@@ -481,10 +526,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "struct PerturbedModel\n",
+    "    A::Matrix{Float64}\n",
+    "    B::Matrix{Float64}\n",
+    "    C::Matrix{Float64}\n",
+    "    D::Matrix{Float64}\n",
+    "    E::Matrix{Float64}\n",
+    "    F::Matrix{Float64}\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -494,11 +548,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Partial derivatives: for a multi variable function $(x1, x2, ... x_k)\\rightarrow R^n$where $_i \\in R^{p_i}$(each variable is a vector), we denote by `f^{\\prime}_{x_i}` the partial derivative with respect to the i-th argument. It is the derivative of function $\\varphi:  R^{p_i} \\rightarrow R^n, u\\mapsto f(x1, \\cdots, x_i,  u , x_{i+1}, \\cdots) $.\n",
+    "Hence it is represented by a jacobian matrix $R^{p_i}\\times R^n$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Array{Float64,2}:\n",
+       " 0.0  0.0\n",
+       " 0.0  0.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# here is how we can compute all matrices\n",
+    "A = jacobian((u->arbitrage(u, x0, s0, x0, c)) , s0 )\n",
+    "B = jacobian((u->arbitrage(s0, u, s0, x0, c)) , s0 )\n",
+    "C = jacobian((u->arbitrage(s0, x0, u, x0, c)) , s0 )\n",
+    "D = jacobian((u->arbitrage(s0, x0, s0, u, c)) , s0 )\n",
+    "E = jacobian((u->transition(s0, x0, c)) , s0 )\n",
+    "F = jacobian((u->transition(s0, x0, c)) , s0 )"
+   ]
   },
   {
    "cell_type": "markdown",
