--- a/notebooks/1_3_Epidemiology_tutorial.ipynb
+++ b/notebooks/1_3_Epidemiology_tutorial.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "Epidemiologic models have two features that depart from standard economic models:\n",
     "\n",
-    "- Agent's behaviour does not take the full system into account, an is irrational in the sense that it isn't forwards looking. Instead, an agent is given a behavioural heuristic.\n",
+    "- Agent's behaviour does not take the full system into account, an is irrational in the sense that it isn't forward looking. Instead, an agent is given a behavioural heuristic.\n",
     "- The transitions of the whole system can be determined without solving for complex interactions first.\n",
     "\n",
     "Understanding why these two assumptions are very costly for economists will keep us busy during a big part of the course. Here we just consider two simple models as small programming exercises."
@@ -59,8 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Compute the transition function `f` for the vector state $s_t$ returning $s_{t+1}$__\n",
-    "\n"
+    "__Compute the transition function `f` for the vector state $s_t$ returning $s_{t+1}$.__"
    ]
   },
   {
