Updates for the course.

--- a/notebooks/3_1_perturbation_neoclassical.ipynb
+++ b/notebooks/3_1_perturbation_neoclassical.ipynb
@@ -18,10 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a = 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,9 +121,9 @@
    "metadata": {},
    "source": [
     "The first order system satisfies:\n",
-    "$$\\begin{eqnarray}A s_t + B x_t + C s_{t+1} + D x_{t+1} & = & 0 \\\\\\\\ \n",
+    "$$\\begin{align}A s_t + B x_t + C s_{t+1} + D x_{t+1} & = & 0 \\\\\\\\ \n",
     "s_{t+1} & = & E s_t + F x_t\n",
-    " \\end{eqnarray}$$\n",
+    " \\end{align}$$\n",
     "\n",
     "__Define a structure `PerturbedModel` to hold matrices A,B,C,D,E,F.__\n",
     "\n"
@@ -241,15 +253,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.7.1",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.7.1"
   }
  },
  "nbformat": 4,
