--- a/notebooks/3_1_perturbation_neoclassical.ipynb
+++ b/notebooks/3_1_perturbation_neoclassical.ipynb
@@ -32,7 +32,14 @@
     }
    ],
    "source": [
-    "a = 4"
+    "function f(x::Vector{Float64})::Vector{Float64}\n",
+    "    a = x[1]\n",
+    "    b = x[2]\n",
+    "    x1 = a+b\n",
+    "    x2 = a*exp(b)\n",
+    "    return [x1,x2]\n",
+    "\n",
+    "end"
    ]
   },
   {
